src/objects/Crime_Data__c.object
<CustomObject>
    <description>Used to support Assessments that require crime data for advanced analytics.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account to Crime table</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Crime_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>County_Current_Agg_Assault__c</fullName>
        <label>County Current Agg Assault</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Current_Burglary__c</fullName>
        <label>County Current Burglary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Current_Cap_Index__c</fullName>
        <description>Not using but may be in future</description>
        <label>County Current Cap Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Current_Crimes_Against_Persons__c</fullName>
        <label>County Current Crimes Against Persons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Current_Crimes_Against_Property__c</fullName>
        <label>County Current Crimes Against Property</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Current_Homicide__c</fullName>
        <inlineHelpText>County Current Homicide</inlineHelpText>
        <label>County Current Homicide</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Current_Larceny__c</fullName>
        <label>County Current Larceny</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Current_Motor_VehicleTheft__c</fullName>
        <label>County Current Motor VehicleTheft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Current_Rape__c</fullName>
        <label>County Current  Rape</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Current_Robbery__c</fullName>
        <inlineHelpText>County Current 
Robbery</inlineHelpText>
        <label>County Current  Robbery</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Past_Agg_Assault__c</fullName>
        <label>County Past  Agg. Assault</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Past_Burglary__c</fullName>
        <label>County Past Burglary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Past_Cap_Index__c</fullName>
        <label>County Past Cap Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Past_Crimes_Against_Persons__c</fullName>
        <label>County Past Crimes Against Persons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Past_Crimes_Against_Property__c</fullName>
        <label>County Past Crimes Against Property</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Past_Homicide__c</fullName>
        <label>County Past Homicide</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Past_Larceny__c</fullName>
        <label>County Past Larceny</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Past_Motor_Veh_Theft__c</fullName>
        <label>County Past Motor Veh. Theft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Past_Rape__c</fullName>
        <label>County Past Rape</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Past_Robbery__c</fullName>
        <label>County Past Robbery</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Projected_Agg_Assault__c</fullName>
        <label>County Projected Agg. Assault</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Projected_Burglary__c</fullName>
        <label>County Projected Burglary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Projected_Cap_Index__c</fullName>
        <label>County Projected Cap Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Projected_Crimes_Against_Persons__c</fullName>
        <label>County Projected Crimes Against Persons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Projected_Crimes_Against_Propert__c</fullName>
        <label>County Projected Crimes Against Propert</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Projected_Homicide__c</fullName>
        <label>County Projected Homicide</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Projected_Larceny__c</fullName>
        <label>County Projected  Larceny</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Projected_Motor_Veh_Theft__c</fullName>
        <label>County Projected  Motor Veh. Theft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Projected_Rape__c</fullName>
        <label>County Projected Rape</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Projected_Robbery__c</fullName>
        <label>County Projected Robbery</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Current_Agg_Assault__c</fullName>
        <label>National Current Agg. Assault</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Current_Burglary__c</fullName>
        <label>National Current Burglary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Current_Cap_Index__c</fullName>
        <description>This field is the index so we can convert it to put all data between rank 1 to 5.Eg 24 index value to highest value subtract and divide by 5 and round it up or something else,may be 24 to 50 is rank or scale 1 etc</description>
        <label>National Current Cap Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Current_Crimes_Against_Persons__c</fullName>
        <label>National Current Crimes Against Persons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Current_Crimes_Against_Property__c</fullName>
        <label>National Current Crimes Against Property</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Current_Homicide__c</fullName>
        <label>National Current Homicide</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Current_Larceny__c</fullName>
        <label>National Current Larceny</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Current_Motor_Veh_Theft__c</fullName>
        <label>National Current  Motor Veh. Theft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Current_Rape__c</fullName>
        <label>National Current Rape</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Current_Robbery__c</fullName>
        <label>National Current Robbery</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Past_Agg_Assault__c</fullName>
        <label>National Past Agg. Assault</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Past_Burglary__c</fullName>
        <label>National Past Burglary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Past_Cap_Index__c</fullName>
        <label>National Past Cap Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Past_Crimes_Against_Persons__c</fullName>
        <label>National Past Crimes Against Persons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Past_Crimes_Against_Property__c</fullName>
        <label>National Past Crimes Against Property</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Past_Homicide__c</fullName>
        <label>National Past Homicide</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Past_Larceny__c</fullName>
        <label>National Past Larceny</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Past_Motor_Veh_Theft__c</fullName>
        <label>National Past Motor Veh. Theft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Past_Rape__c</fullName>
        <label>National Past Rape</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Past_Robbery__c</fullName>
        <label>National Past Robbery</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Projected_Agg_Assault__c</fullName>
        <label>National Projected Agg. Assault</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Projected_Burglary__c</fullName>
        <label>National Projected Burglary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Projected_Cap_Index__c</fullName>
        <label>National Projected Cap Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Projected_Crimes_Against_Perso__c</fullName>
        <label>National Projected Crimes Against Perso</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Projected_Crimes_Against_Prope__c</fullName>
        <label>National Projected Crimes Against Prope</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Projected_Homicide__c</fullName>
        <label>National Projected Homicide</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Projected_Larceny__c</fullName>
        <label>National Projected Larceny</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Projected_Motor_Veh_Theft__c</fullName>
        <label>National Projected  Motor Veh. Theft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Projected_Rape__c</fullName>
        <label>National Projected Rape</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Projected_Robbery__c</fullName>
        <label>National Projected Robbery</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Radius1__c</fullName>
        <label>Radius1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Radius2__c</fullName>
        <label>Radius2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScaleIndex__c</fullName>
        <inlineHelpText>This can be used to store the appropriate scaling</inlineHelpText>
        <label>ScaleIndex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Current_Agg_Assault__c</fullName>
        <label>State Current Agg. Assault</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Current_Burglary__c</fullName>
        <label>State Current Burglary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Current_Cap_Index__c</fullName>
        <description>This we are not using but may be if we have to see it in future</description>
        <inlineHelpText>This we are not using but may be if we have to see it in future</inlineHelpText>
        <label>State Current Cap Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Current_Crimes_Against_Persons__c</fullName>
        <label>State Current Crimes Against Persons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Current_Crimes_Against_Property__c</fullName>
        <label>State Current Crimes Against Property</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Current_Homicide__c</fullName>
        <label>State Current Homicide</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Current_Larceny__c</fullName>
        <label>State Current Larceny</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Current_Motor_Veh_Theft__c</fullName>
        <label>State Current  Motor Veh. Theft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Current_Rape__c</fullName>
        <label>State Current Rape</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Current_Robbery__c</fullName>
        <label>State Current Robbery</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Past_Agg_Assault__c</fullName>
        <label>State Past  Agg. Assault</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Past_Burglary__c</fullName>
        <label>State Past Burglary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Past_Cap_Index__c</fullName>
        <label>State Past Cap Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Past_Crimes_Against_Persons__c</fullName>
        <label>State Past Crimes Against Persons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Past_Homicide__c</fullName>
        <label>State Past Homicide</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Past_Larceny__c</fullName>
        <label>State Past Larceny</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Past_Rape__c</fullName>
        <label>State Past Rape</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Past_Robbery__c</fullName>
        <label>State Past Robbery</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Crime Data</label>
    <nameField>
        <label>Crime Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Crime Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>